--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1,5 +1,6 @@
-$color: hsl(145, 100%, 50%);
+$color: hsl(140, 6%, 10%);
 * {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     color: $color;
+    font-size: 1em;
 }
