--- a/src/index.ejs
+++ b/src/index.ejs
@@ -16,5 +16,6 @@
       You need to enable JavaScript to run this app!
     </noscript>
     <div id="app"></div>
+    <script src="/env.js"></script>
   </body>
 </html>
